# husky_ur5e_robotiq_manipulation

./: README.md
husky_manipulation/husky_ur_bringup/launch/: .husky_ur_bringup.launch.swp
husky_manipulation/husky_ur_description/urdf/: husky_ur5_description.urdf.xacro  husky_ur5_e_description.urdf.xacro  husky_ur5_e_gripper_description.urdf.xacro  realsense.urdf.xacro
husky_manipulation/husky_ur_moveit_config/: package.xml
husky_manipulation/husky_ur_moveit_config/config/: controllers.yaml  husky.srdf
husky_manipulation/husky_ur_moveit_config/launch/: husky_ur_moveit_planning_execution.launch
husky_manipulation/husky_ur_robotiq_2f_85_moveit_config/config/: controllers.yaml  husky.srdf.save
husky_manipulation/husky_ur_robotiq_2f_85_moveit_config/launch/: husky_ur_robotiq_2f_85_moveit_planning_execution.launch
husky_moveit/: CMakeLists.txt  package.xml
husky_moveit/src/: node.cpp
husky_nav/: CMakeLists.txt  package.xml
husky_nav/src/: .hello.cpp.swp  hello.cpp  node.cpp  old.cpp
robotiq/robotiq_2f_85_gripper_visualization/urdf/: robotiq_2f_85_static.urdf.xacro  robotiq_arg2f_85_model_macro.xacro
robotiq/robotiq_2f_gripper_control/: CMakeLists.txt
robotiq/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch  test_85mm_gripper.launch
robotiq/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: modbus_crc.py  robotiq_2f_gripper.py  robotiq_2f_gripper_driver.py
robotiq/robotiq_3f_gripper_control/: CMakeLists.txt  mainpage.dox  package.xml
robotiq/robotiq_3f_gripper_control/cfg/: SModel.cfg
robotiq/robotiq_3f_gripper_control/include/robotiq_3f_gripper_control/: s_model_api.h  s_model_can_client.h  s_model_client_base.h  s_model_diagnostics.h  s_model_ethercat_client.h  s_model_hw_interface.h  s_model_ros.h
robotiq/robotiq_3f_gripper_control/launch/: s_model.launch
robotiq/robotiq_3f_gripper_control/nodes/: SModelSimpleController.py  SModelStatusListener.py  SModelTcpNode.py
robotiq/robotiq_3f_gripper_control/src/: s_model_can_node.cpp  s_model_ethercat_node.cpp
robotiq/robotiq_3f_gripper_control/src/robotiq_3f_gripper_control/: baseSModel.py  s_model_api.cpp  s_model_can_client.cpp  s_model_diagnostics.cpp  s_model_ethercat_client.cpp  s_model_ethercat_node.cpp  s_model_hw_interface.cpp  s_model_ros.cpp
robotiq/robotiq_3f_gripper_msgs/: CMakeLists.txt  package.xml
robotiq/robotiq_3f_gripper_visualization/: CMakeLists.txt  package.xml  visualize.rviz
robotiq/robotiq_3f_gripper_visualization/launch/: test_3f_fixed_model.launch  test_3f_model.launch
robotiq/robotiq_3f_gripper_visualization/meshes/: 3f_gripper_fixed.dae
robotiq/robotiq_3f_gripper_visualization/urdf/: robotiq_3f.urdf.xacro  robotiq_3f_fixed.urdf.xacro  robotiq_3f_fixed_model.urdf.xacro  robotiq_3f_model.urdf.xacro
ucla_husky/ucla_husky_bringup/: package.xml
ucla_husky/ucla_husky_bringup/config/: ur5e_controllers.yaml
ucla_husky/ucla_husky_description/: CMakeLists.txt  package.xml
ucla_husky_bringup/: CMakeLists.txt
ucla_husky_bringup/launch/: simulation.launch
ucla_husky_bringup_gripper/: CMakeLists.txt  package.xml
ucla_husky_bringup_gripper/launch/: simulation.launch.save
ucla_husky_bringup_gripper/scripts/: setup.bash
ucla_husky_gripper/ucla_husky_bringup_gripper/config/: ur5e_controllers.yaml
ucla_husky_gripper/ucla_husky_bringup_gripper/launch/: simulation.launch  simulation_dual.launch
(+1 files in other folders)
