<?xml version="1.0"?>
<package format="2">
  <name>husky_nav</name>
  <version>0.0.0</version>
  <description>The srilab husky navigation package</description>

  <maintainer email="vivekalumootil@gmail.com">srilab</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>

  <export>
  </export>
</package>
